added hits system and buffed bosses and changed enemies